test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_type_name_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(ptr)
  ;
  int
  *
  identifier(array_pointer)
  [
  const int(3)
  ]
  =
  (
  [
  const int(3)
  ]
  (
  *
  )
  )
  identifier(ptr)
  ;
  return
  const int(0)
  ;
  }
